# ml-tutorial

./: .gitignore  KNOW.md  main.py  pyproject.toml
datasets/: multiple_linear_regressin_testdata.csv  simple_linear_regression_testdata.csv
src/: linear_regression.py  multiple_linear_regression.py  number_classification.py  simple_linear_regression.py  simple_linear_regression_jax.py  single_linear_regression.py
