[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chex>=0.1.91",
    "flax>=0.12.6",
    "jax>=0.9.2",
    "kaggle>=2.0.1",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.11.34",
    "orbax-export>=0.0.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
]
