[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chex>=0.1.91",
    "flax>=0.12.6",
    "jax>=0.9.2",
    "kaggle>=2.0.1",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.11.34",
    "orbax-export>=0.0.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "types-seaborn>=0.13.2.20260518",
]

[tool.pyrefly]
disable-search-path-heuristics = true
search-path = ["."]
